name:              Ucam-Webauth
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs:  .
    exposed-modules: UcamWebauth

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

    build-depends: base                          >= 4          && < 5
                 , attoparsec
                 , wai
                 , classy-prelude                >= 0.10.2
                 , bytestring                    >= 0.9        && < 0.11
                 , base64-bytestring
                 , text                          >= 0.11       && < 2.0
                 , http-types
                 , warp                          >= 3.0        && < 3.1
                 , aeson                         >= 0.6
                 , unordered-containers
                 , containers
                 , time
                 , timerep
                 , blaze-builder
                 , errors
                 , cryptonite
                 , x509
                 , pem

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , Ucam-Webauth
                 , hspec >= 2.0.0
                 , classy-prelude
