name:              Ucam-Webauth
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs:  src
    exposed-modules: Network.Protocol.UcamWebauth 
                     Network.Wai.Protocol.UcamWebauth 
                     Network.Wai.Protocol.Raven.Auth
                     Network.Wai.Protocol.Raven.Test
                     Network.Wai.Protocol.Raven.Example

    other-modules:   Network.Protocol.UcamWebauth.Internal
                     Network.Protocol.UcamWebauth.Data
                     Network.Wai.Protocol.Raven.Internal
                     Data.Lens.Internal
                     Data.Settings.Internal

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: OverloadedStrings
                DeriveGeneric
                DataKinds
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards
                ScopedTypeVariables
                RankNTypes
                NamedFieldPuns

    build-depends: base                          >= 4          && < 5
                 , aeson                         >= 0.6
                 , attoparsec
                 , base64-bytestring
                 , blaze-builder
                 , bytestring                    >= 0.9        && < 0.11
                 , classy-prelude                >= 0.10.2
                 , containers
                 , cryptonite
                 , errors
                 , http-types
                 , mtl
                 , pem
                 , text                          >= 0.11       && < 2.0
                 , time
                 , timerep
                 , unordered-containers
                 , wai
                 , warp                          >= 3.0        && < 3.1
                 , x509

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , Ucam-Webauth
                 , hspec >= 2.0.0
                 , classy-prelude
